@@ -5,7 +5,8 @@ zeit.content.dynamicfolder changes
 1.3.0 (unreleased)
 ------------------
 
-- Update to `zeit.cms >= 2.90`.
+- Don't copy the template's UUID into the virtual content created from
+  it (BUG-391).
 
 
 1.2.0 (2016-08-24)
